--- a/core/resources/src/main/res/values-ja/strings.xml
+++ b/core/resources/src/main/res/values-ja/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ ImageToolbox is an image editor for android
-  ~ Copyright (c) 2025 T8RIN (Malik Mukhametzyanov)
+  ~ Copyright (c) 2026 T8RIN (Malik Mukhametzyanov)
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -14,7 +14,9 @@
   ~
   ~ You should have received a copy of the Apache License
   ~ along with this program.  If not, see <http://www.apache.org/licenses/LICENSE-2.0>.
-  --><resources xmlns:tools="http://schemas.android.com/tools">
+  -->
+
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="smth_went_wrong">問題が発生しました: %1$s</string>
     <string name="check_source_code_sub">最新のアップデートを入手し、問題を議論するなど</string>
     <string name="color_red">赤</string>
@@ -1819,4 +1821,184 @@
     <string name="hyper_os">HyperOS</string>
     <string name="hyper_os_sub">HyperOSデザインシステムに基づいたUIを使用します</string>
     <string name="mask_pattern">マスクパターン</string>
+    <string name="code_may_be_not_scannable">このコードはスキャンできない可能性があります。すべてのデバイスで読み取れるように外観パラメータを変更してください</string>
+    <string name="not_scannable">スキャン不可</string>
+    <string name="launcher_mode_sub">ツールはホーム画面のアプリランチャーのようになり、よりコンパクトになります</string>
+    <string name="launcher_mode">ランチャーモード</string>
+    <string name="flood_fill_sub">選択したブラシとスタイルで領域を塗りつぶします</string>
+    <string name="flood_fill">塗りつぶし</string>
+    <string name="spray">スプレー</string>
+    <string name="spray_sub">グラフィティスタイルのパスを描画します</string>
+    <string name="square_particles">四角い粒子</string>
+    <string name="square_particles_sub">スプレー粒子は円ではなく正方形になります</string>
+    <string name="palette_tools">パレットツール</string>
+    <string name="palette_tools_sub">画像からパレットに使用するベーシック/マテリアルを生成、またはさまざまなパレット形式でインポート/エクスポート</string>
+    <string name="edit_palette">パレットの編集</string>
+    <string name="edit_palette_sub">さまざまな形式でパレットをエクスポート/インポート</string>
+    <string name="color_name">色の名前</string>
+    <string name="palette_name">パレット名</string>
+    <string name="palette_format">パレットフォーマット</string>
+    <string name="export_palette_sub">生成されたパレットをさまざまな形式でエクスポートする</string>
+    <string name="add_color_palette_sub">現在のパレットに新しい色を追加します</string>
+    <string name="palette_name_not_supported">%s 形式はパレット名の指定をサポートしていません</string>
+    <string name="wallpapers_export_not_avaialbe">Play ストアのポリシーにより、この機能は現在のビルドに含めることができません。この機能にアクセスするには、別のソースから ImageToolbox をダウンロードしてください。利用可能なビルドは以下の GitHub で見つけることができます。</string>
+    <string name="open_github_page">Githubページを開く</string>
+    <string name="overwrite_files_sub_short">選択したフォルダーに保存されるのではなく、元のファイルが新しいファイルに置き換えられます</string>
+    <string name="hidden_watermark_text_detected">検出された隠し透かしテキスト</string>
+    <string name="hidden_watermark_image_detected">検出された隠し透かし画像</string>
+    <string name="this_image_was_hidden">この画像は非表示にされました</string>
+    <string name="generative_inpaint">ジェネレーティブ・インペインティング</string>
+    <string name="generative_inpaint_sub">OpenCV に依存せずに、AI モデルを使用して画像内のオブジェクトを削除できます。この機能を使用するには、アプリは必要なモデル (約 200 MB) を GitHub からダウンロードします。</string>
+    <string name="generative_inpaint_ready_sub">OpenCV に依存せずに、AI モデルを使用して画像内のオブジェクトを削除できます。これは長時間実行される操作になる可能性があります</string>
+    <string name="error_level_analysis">エラーレベル分析</string>
+    <string name="luminance_gradient">輝度勾配</string>
+    <string name="average_distance">平均距離</string>
+    <string name="copy_move_detection">コピー移動検出</string>
+    <string name="retain">保持</string>
+    <string name="coefficent">係数</string>
+    <string name="clipboard_data_is_too_large">クリップボードのデータが大きすぎます</string>
+    <string name="data_is_too_large_to_copy">データが大きすぎてコピーできない</string>
+    <string name="simple_weave_pixelization">シンプルな織りのピクセル化</string>
+    <string name="staggered_pixelization">千鳥状ピクセル化</string>
+    <string name="cross_pixelization">クロスピクセル化</string>
+    <string name="micro_macro_pixelization">マイクロマクロピクセル化</string>
+    <string name="orbital_pixelization">軌道ピクセル化</string>
+    <string name="vortex_pixelization">渦ピクセル化</string>
+    <string name="pulse_grid_pixelization">パルスグリッドピクセル化</string>
+    <string name="nucleus_pixelization">核のピクセル化</string>
+    <string name="radial_weave_pixelization">放射状織りピクセル化</string>
+    <string name="cannot_open_uri">URI「%s」を開けません</string>
+    <string name="snowfall_mode">降雪モード</string>
+    <string name="enabled">有効</string>
+    <string name="border_frame">ボーダーフレーム</string>
+    <string name="glitch_variant">グリッチのバリアント</string>
+    <string name="channel_shift">チャンネルシフト</string>
+    <string name="max_offset">最大オフセット</string>
+    <string name="vhs">VHS</string>
+    <string name="block_glitch">ブロックグリッチ</string>
+    <string name="block_size">ブロックサイズ</string>
+    <string name="crt_curvature">CRTの曲率</string>
+    <string name="curvature">曲率</string>
+    <string name="chroma">彩度</string>
+    <string name="pixel_melt">ピクセルメルト</string>
+    <string name="max_drop">最大ドロップ</string>
+    <string name="ai_tools">AIツール</string>
+    <string name="ai_tools_sub">アーティファクトの除去やノイズ除去など、AI モデルを通じて画像を処理するためのさまざまなツール</string>
+    <string name="model_anime_undeint">圧縮、ギザギザの線</string>
+    <string name="model_broadcast">漫画、放送圧縮</string>
+    <string name="model_rgb_max_denoise_fp16">一般的な圧縮、一般的なノイズ</string>
+    <string name="model_wb_denoise">無色の漫画のノイズ</string>
+    <string name="model_span_anime_pretrain">高速、一般的な圧縮、一般的なノイズ、アニメーション/コミック/アニメ</string>
+    <string name="model_book_scan">本のスキャン</string>
+    <string name="model_overexposure">露出補正</string>
+    <string name="model_fbcnn_color_fp16">一般的な圧縮、カラー画像に最適</string>
+    <string name="model_fbcnn_gray_fp16">一般的な圧縮、グレースケール画像に最適</string>
+    <string name="model_fbcnn_gray_double_fp16">一般圧縮、グレースケール画像、強力</string>
+    <string name="model_scunet_color_gan_fp16">一般的なノイズ、カラー画像</string>
+    <string name="model_scunet_color_psnr_fp16">一般的なノイズ、カラー画像、より詳細なディテール</string>
+    <string name="model_scunet_gray_15_fp16">一般的なノイズ、グレースケール画像</string>
+    <string name="model_scunet_gray_25_fp16">一般的なノイズ、グレースケール画像、強め</string>
+    <string name="model_scunet_gray_50_fp16">一般的なノイズ、グレースケール画像、最も強い</string>
+    <string name="model_jpeg_destroyer">一般的な圧縮</string>
+    <string name="model_jaywreck">一般的な圧縮</string>
+    <string name="model_h264">テクスチャライゼーション、h264 圧縮</string>
+    <string name="model_vhs">VHS圧縮</string>
+    <string name="model_cinepak">非標準圧縮 (cinepak、msvideo1、roq)</string>
+    <string name="model_debink_v4">ビンク圧縮、ジオメトリでの改善</string>
+    <string name="model_debink_v5">ビンク圧縮、強化</string>
+    <string name="model_debink_v6">ビンク圧縮、ソフト、ディテール保持</string>
+    <string name="model_antialias">階段状の効果を除去し、滑らかにする</string>
+    <string name="model_kdm_scans">スキャンしたアート/図面、軽度の圧縮、モアレ</string>
+    <string name="model_bandage">カラーバンディング</string>
+    <string name="model_halftone">ゆっくりとハーフトーンを除去します</string>
+    <string name="model_colorizer">グレースケール/白黒画像用の一般的なカラーライザー。より良い結果を得るには、DDColor を使用します。</string>
+    <string name="model_deedge">エッジ除去</string>
+    <string name="model_desharpen">過度の研ぎを除去します</string>
+    <string name="model_dither">遅い、ディザリング</string>
+    <string name="model_gainres">アンチエイリアシング、一般的なアーティファクト、CGI</string>
+    <string name="model_kdm003_scans">KDM003 スキャン処理</string>
+    <string name="model_nmkd_jaywreck3_lite">軽量画質向上モデル</string>
+    <string name="model_bcgone_detailed_v2">圧縮アーティファクトの除去</string>
+    <string name="model_bcgone_smooth">圧縮アーティファクトの除去</string>
+    <string name="model_bandage_smooth">スムーズな結果による包帯除去</string>
+    <string name="model_bendel_halftone">ハーフトーンパターン処理</string>
+    <string name="model_dither_deleter_v3_smooth">ディザパターン除去V3</string>
+    <string name="model_jpeg_destroyer_v2">JPEGアーチファクト除去V2</string>
+    <string name="model_nmkd_h264_texturize">H.264 テクスチャの強化</string>
+    <string name="model_vhs_sharpen">VHS のシャープ化と強化</string>
+    <string name="merging">結合</string>
+    <string name="chunk_size">チャンクサイズ</string>
+    <string name="overlap_size">オーバーラップサイズ</string>
+    <string name="note_chunk_info">%1$d ピクセルを超える画像はスライスされてチャンクに処理され、継ぎ目が見えないようにこれらをオーバーラップ ブレンドします。</string>
+    <string name="large_chunk_warning">サイズが大きいと、ローエンド デバイスで不安定になる可能性があります</string>
+    <string name="select_one_to_start">開始するには 1 つを選択してください</string>
+    <string name="delete_model_sub">%s モデルを削除しますか?再度ダウンロードする必要があります</string>
+    <string name="confirm">確認する</string>
+    <string name="models">モデル</string>
+    <string name="downloaded_models">ダウンロードしたモデル</string>
+    <string name="available_models">利用可能なモデル</string>
+    <string name="preparing">準備中</string>
+    <string name="active_model">アクティブモデル</string>
+    <string name="failed_to_open_session">セッションを開けませんでした</string>
+    <string name="only_onnx_models">.onnx/.ort モデルのみインポート可能</string>
+    <string name="import_model">インポートモデル</string>
+    <string name="import_model_sub">さらに使用するためにカスタム onnx モデルをインポートします。onnx/ort モデルのみが受け入れられ、ほぼすべての esrgan のようなバリアントをサポートします。</string>
+    <string name="imported_models">輸入モデル</string>
+    <string name="model_scunet_color_15_fp16">一般的なノイズ、カラー画像</string>
+    <string name="model_scunet_color_25_fp16">一般的なノイズ、カラー画像、強め</string>
+    <string name="model_scunet_color_50_fp16">一般的なノイズ、カラー画像、最強</string>
+    <string name="model_artifacts_dithering_alsa">ディザリングアーティファクトとカラーバンディングを軽減し、滑らかなグラデーションと平坦なカラー領域を改善します。</string>
+    <string name="model_nmkd_brighten_redux">自然な色を維持しながら、バランスの取れたハイライトで画像の明るさとコントラストを強化します。</string>
+    <string name="model_nmkd_brighten">暗い画像を細部を維持し、露出オーバーを避けながら明るくします。</string>
+    <string name="model_nmkd_detoon">過度な色調を除去し、よりニュートラルで自然なカラーバランスを取り戻します。</string>
+    <string name="model_noise_toner_poisson_detailed">細かいディテールとテクスチャの維持に重点を置いて、ポアソン ベースのノイズ トーンを適用します。</string>
+    <string name="model_noise_toner_poisson_soft">ソフトなポアソン ノイズ トーンを適用して、よりスムーズで攻撃性の低い視覚的な結果を実現します。</string>
+    <string name="model_noise_toner_uniform_detailed">均一なノイズ調色は、ディテールの維持と画像の鮮明さに重点を置いています。</string>
+    <string name="model_noise_toner_uniform_soft">穏やかで均一なノイズ調色により、繊細な質感と滑らかな外観を実現します。</string>
+    <string name="model_repainter">アーティファクトを再描画し、画像の一貫性を向上させることで、損傷した領域や不均一な領域を修復します。</string>
+    <string name="model_debandurh_fs_ultra_lite">最小限のパフォーマンスコストでカラーバンディングを除去する軽量デバンディングモデル。</string>
+    <string name="model_jpeg_0_20">非常に高圧縮アーティファクト (品質 0 ～ 20%) を含む画像を最適化し、鮮明さを向上させます。</string>
+    <string name="model_jpeg_20_40">高圧縮アーティファクト (品質 20 ～ 40%) で画像を強化し、詳細を復元し、ノイズを低減します。</string>
+    <string name="model_jpeg_40_60">適度な圧縮 (品質 40 ～ 60%) で画像を改善し、鮮明さと滑らかさのバランスをとります。</string>
+    <string name="model_jpeg_60_80">軽い圧縮 (60 ～ 80% の品質) で画像を洗練し、微妙なディテールやテクスチャを強調します。</string>
+    <string name="model_jpeg_80_100">自然な外観と詳細を維持しながら、ほぼ損失のない画像 (80 ～ 100% の品質) をわずかに向上させます。</string>
+    <string name="model_spongecolor_lite">シンプルで素早いカラー化、漫画、理想的ではない</string>
+    <string name="model_deblr">画像のぼやけをわずかに軽減し、アーティファクトを発生させることなくシャープネスを向上させます。</string>
+    <string name="processing_channel">長時間実行される操作</string>
+    <string name="processing_image">画像処理中</string>
+    <string name="processing">処理</string>
+    <string name="model_artifacts_jpg_0_20">非常に低品質の画像 (0 ～ 20%) に含まれる重い JPEG 圧縮アーティファクトを除去します。</string>
+    <string name="model_artifacts_jpg_20_40">高圧縮画像内の強力な JPEG アーティファクトを軽減します (20 ～ 40%)。</string>
+    <string name="model_artifacts_jpg_40_60">画像の詳細 (40 ～ 60%) を維持しながら、中程度の JPEG アーティファクトをクリーンアップします。</string>
+    <string name="model_artifacts_jpg_60_80">軽い JPEG アーティファクトをかなり高品質の画像 (60 ～ 80%) に調整します。</string>
+    <string name="model_artifacts_jpg_80_100">ほぼロスレス画像の小さな JPEG アーティファクトを微妙に軽減します (80 ～ 100%)。</string>
+    <string name="model_redetail_v2">細かいディテールとテクスチャを強化し、大きなアーティファクトを発生させることなく知覚されるシャープネスを向上させます。</string>
+    <string name="processing_finished">処理が完了しました</string>
+    <string name="processing_failed">処理に失敗しました</string>
+    <string name="model_itf_skin_diffdetail_lite">自然な外観を維持しながら肌のテクスチャとディテールを強化し、速度を最適化します。</string>
+    <string name="model_sbdv_dejpeg">JPEG 圧縮アーティファクトを除去し、圧縮された写真の画質を復元します。</string>
+    <string name="model_iso_denoise_v1">暗い場所で撮影した写真の ISO ノイズを低減し、ディテールを維持します。</string>
+    <string name="model_dejumbo">露出過度または「ジャンボ」ハイライトを修正し、より良い色調バランスを復元します。</string>
+    <string name="model_ddcolor_tiny">グレースケール画像に自然な色を追加する、軽量かつ高速なカラー化モデル。</string>
+    <string name="type_dejpeg">デジェペグ</string>
+    <string name="type_denoise">ノイズ除去</string>
+    <string name="type_colorize">色付け</string>
+    <string name="type_artifacts">アーティファクト</string>
+    <string name="type_enhance">強化する</string>
+    <string name="type_anime">アニメ</string>
+    <string name="type_scans">スキャン</string>
+    <string name="type_upscale">高級感のある</string>
+    <string name="model_realesrgan_x4v3">一般画像用の X4 アップスケーラ。 GPU の使用量と時間が少なく、適度なブラー除去とノイズ除去を備えた小型モデル。</string>
+    <string name="model_realesrgan_x2plus">テクスチャと自然なディテールを維持する、一般的な画像用の X2 アップスケーラー。</string>
+    <string name="model_realesrgan_x4plus">強化されたテクスチャとリアルな結果を備えた一般画像用の X4 アップスケーラー。</string>
+    <string name="model_realesrgan_x4plus_anime">アニメ画像に最適化された X4 アップスケーラー。 6 つの RRDB ブロックにより、より鮮明なラインとディテールが実現します。</string>
+    <string name="model_realesrnet_x4plus">MSE 損失を備えた X4 アップスケーラーは、よりスムーズな結果を生成し、一般的な画像のアーティファクトを軽減します。</string>
+    <string name="model_realesrgan_x4plus_anime_4b32f">アニメ画像に最適化された X4 アップスケーラー。よりシャープなディテールと滑らかなラインを備えた 4B32F バリアント。</string>
+    <string name="model_ultrasharp_v2_x4">一般画像用の X4 UltraSharp V2 モデル。シャープさと明瞭さを強調します。</string>
+    <string name="model_ultrasharp_v2_lite_x4">X4デジタルハイエンドシリーズV2ライト。高速かつ小型で、GPU メモリの使用量を減らしながらディテールを維持します。</string>
+    <string name="model_rmbg_1_4">素早い背景除去が可能な軽量モデル。バランスのとれたパフォーマンスと精度。ポートレート、オブジェクト、シーンに使用します。ほとんどの使用例に推奨されます。</string>
+    <string name="model_rmbg_2_0">優れたディテール処理を備えた強化バージョン。複雑な背景や透明なオブジェクトの方が適しています。精度は高くなりますが、より多くの処理能力が必要になります。</string>
+    <string name="type_removebg">BGを削除する</string>
+    <string name="horizontal_border_thickness">水平方向の境界線の太さ</string>
+    <string name="vertical_border_thickness">垂直方向の境界線の太さ</string>
 </resources>
