--- a/core/resources/src/main/res/values-ta/strings.xml
+++ b/core/resources/src/main/res/values-ta/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ ImageToolbox is an image editor for android
-  ~ Copyright (c) 2025 T8RIN (Malik Mukhametzyanov)
+  ~ Copyright (c) 2026 T8RIN (Malik Mukhametzyanov)
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -14,7 +14,9 @@
   ~
   ~ You should have received a copy of the Apache License
   ~ along with this program.  If not, see <http://www.apache.org/licenses/LICENSE-2.0>.
-  --><resources xmlns:tools="http://schemas.android.com/tools">
+  -->
+
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="pick_image">தொடங்குவதற்கு படத்தைத் தேர்ந்தெடுக்கவும்</string>
     <string name="flexible">நெகிழ்வான</string>
     <string name="stay">இருங்கள்</string>
@@ -1819,4 +1821,184 @@
     <string name="hyper_os">ஐப்பர் ஓஎச்</string>
     <string name="hyper_os_sub">Xiaomi HyperOS போன்ற பாணி</string>
     <string name="mask_pattern">முகமூடி முறை</string>
+    <string name="code_may_be_not_scannable">இந்தக் குறியீட்டை ஸ்கேன் செய்ய முடியாமல் போகலாம், எல்லாச் சாதனங்களிலும் இதைப் படிக்கக்கூடிய வகையில் தோற்ற அளவுருக்களை மாற்றவும்</string>
+    <string name="not_scannable">ஸ்கேன் செய்ய முடியாது</string>
+    <string name="launcher_mode_sub">கருவிகள் மிகவும் கச்சிதமாக இருக்க முகப்புத் திரை ஆப் லாஞ்சர் போல இருக்கும்</string>
+    <string name="launcher_mode">துவக்கி பயன்முறை</string>
+    <string name="flood_fill_sub">தேர்ந்தெடுக்கப்பட்ட தூரிகை மற்றும் பாணியுடன் ஒரு பகுதியை நிரப்புகிறது</string>
+    <string name="flood_fill">வெள்ளம் நிரப்பு</string>
+    <string name="spray">தெளிக்கவும்</string>
+    <string name="spray_sub">கிராஃபிட்டி பாணியிலான பாதையை வரைகிறது</string>
+    <string name="square_particles">சதுர துகள்கள்</string>
+    <string name="square_particles_sub">ஸ்ப்ரே துகள்கள் வட்டங்களுக்கு பதிலாக சதுர வடிவில் இருக்கும்</string>
+    <string name="palette_tools">தட்டு கருவிகள்</string>
+    <string name="palette_tools_sub">படத்திலிருந்து அடிப்படை/பொருளை உருவாக்கவும் அல்லது வெவ்வேறு தட்டு வடிவங்களில் இறக்குமதி/ஏற்றுமதி</string>
+    <string name="edit_palette">தட்டு திருத்தவும்</string>
+    <string name="edit_palette_sub">பல்வேறு வடிவங்களில் ஏற்றுமதி/இறக்குமதி தட்டு</string>
+    <string name="color_name">வண்ண பெயர்</string>
+    <string name="palette_name">தட்டு பெயர்</string>
+    <string name="palette_format">தட்டு வடிவம்</string>
+    <string name="export_palette_sub">உருவாக்கப்பட்ட தட்டுகளை வெவ்வேறு வடிவங்களுக்கு ஏற்றுமதி செய்யவும்</string>
+    <string name="add_color_palette_sub">தற்போதைய தட்டுக்கு புதிய வண்ணத்தைச் சேர்க்கிறது</string>
+    <string name="palette_name_not_supported">%s வடிவம் தட்டுப் பெயரை வழங்குவதை ஆதரிக்காது</string>
+    <string name="wallpapers_export_not_avaialbe">Play Store கொள்கைகள் காரணமாக, இந்த அம்சத்தை தற்போதைய கட்டமைப்பில் சேர்க்க முடியாது. இந்தச் செயல்பாட்டை அணுக, மாற்று மூலத்திலிருந்து ImageToolboxஐப் பதிவிறக்கவும். கீழே உள்ள GitHub இல் கிடைக்கும் உருவாக்கங்களைக் காணலாம்.</string>
+    <string name="open_github_page">கிதுப் பக்கத்தைத் திறக்கவும்</string>
+    <string name="overwrite_files_sub_short">தேர்ந்தெடுக்கப்பட்ட கோப்புறையில் சேமிப்பதற்குப் பதிலாக அசல் கோப்பு புதியதாக மாற்றப்படும்</string>
+    <string name="hidden_watermark_text_detected">மறைக்கப்பட்ட வாட்டர்மார்க் உரை கண்டறியப்பட்டது</string>
+    <string name="hidden_watermark_image_detected">மறைக்கப்பட்ட வாட்டர்மார்க் படம் கண்டறியப்பட்டது</string>
+    <string name="this_image_was_hidden">இந்த படம் மறைக்கப்பட்டது</string>
+    <string name="generative_inpaint">உருவாக்கும் ஓவியம்</string>
+    <string name="generative_inpaint_sub">OpenCV ஐ நம்பாமல், AI மாதிரியைப் பயன்படுத்தி ஒரு படத்தில் உள்ள பொருட்களை அகற்ற உங்களை அனுமதிக்கிறது. இந்த அம்சத்தைப் பயன்படுத்த, ஆப்ஸ் GitHub இலிருந்து தேவையான மாதிரியை (~200 MB) பதிவிறக்கும்</string>
+    <string name="generative_inpaint_ready_sub">OpenCV ஐ நம்பாமல், AI மாதிரியைப் பயன்படுத்தி ஒரு படத்தில் உள்ள பொருட்களை அகற்ற உங்களை அனுமதிக்கிறது. இது நீண்ட கால நடவடிக்கையாக இருக்கலாம்</string>
+    <string name="error_level_analysis">பிழை நிலை பகுப்பாய்வு</string>
+    <string name="luminance_gradient">ஒளிர்வு சாய்வு</string>
+    <string name="average_distance">சராசரி தூரம்</string>
+    <string name="copy_move_detection">நகலெடு கண்டறிதல்</string>
+    <string name="retain">தக்கவைத்துக்கொள்</string>
+    <string name="coefficent">திறன்மிக்கது</string>
+    <string name="clipboard_data_is_too_large">கிளிப்போர்டு தரவு மிகவும் பெரியதாக உள்ளது</string>
+    <string name="data_is_too_large_to_copy">தரவு நகலெடுக்க மிகவும் பெரியது</string>
+    <string name="simple_weave_pixelization">எளிய நெசவு பிக்சலைசேஷன்</string>
+    <string name="staggered_pixelization">நிலைகுலைந்த பிக்சலைசேஷன்</string>
+    <string name="cross_pixelization">குறுக்கு பிக்சலைசேஷன்</string>
+    <string name="micro_macro_pixelization">மைக்ரோ மேக்ரோ பிக்சலைசேஷன்</string>
+    <string name="orbital_pixelization">சுற்றுப்பாதை பிக்சலைசேஷன்</string>
+    <string name="vortex_pixelization">சுழல் பிக்சலைசேஷன்</string>
+    <string name="pulse_grid_pixelization">பல்ஸ் கிரிட் பிக்சலைசேஷன்</string>
+    <string name="nucleus_pixelization">நியூக்ளியஸ் பிக்சலைசேஷன்</string>
+    <string name="radial_weave_pixelization">ரேடியல் வீவ் பிக்சலைசேஷன்</string>
+    <string name="cannot_open_uri">uri \\"%s\\" ஐ திறக்க முடியவில்லை</string>
+    <string name="snowfall_mode">பனிப்பொழிவு முறை</string>
+    <string name="enabled">இயக்கப்பட்டது</string>
+    <string name="border_frame">பார்டர் ஃப்ரேம்</string>
+    <string name="glitch_variant">தடுமாற்றம் மாறுபாடு</string>
+    <string name="channel_shift">சேனல் ஷிப்ட்</string>
+    <string name="max_offset">அதிகபட்ச ஆஃப்செட்</string>
+    <string name="vhs">விஎச்எஸ்</string>
+    <string name="block_glitch">தடுமாற்றம்</string>
+    <string name="block_size">தொகுதி அளவு</string>
+    <string name="crt_curvature">CRT வளைவு</string>
+    <string name="curvature">வளைவு</string>
+    <string name="chroma">குரோமா</string>
+    <string name="pixel_melt">பிக்சல் உருகும்</string>
+    <string name="max_drop">மேக்ஸ் டிராப்</string>
+    <string name="ai_tools">AI கருவிகள்</string>
+    <string name="ai_tools_sub">AI மாதிரிகள் மூலம் படங்களைச் செயலாக்க பல்வேறு கருவிகள் கலைப் பொருட்களை அகற்றுதல் அல்லது நீக்குதல் போன்றவை</string>
+    <string name="model_anime_undeint">சுருக்க, துண்டிக்கப்பட்ட கோடுகள்</string>
+    <string name="model_broadcast">கார்ட்டூன்கள், ஒளிபரப்பு சுருக்கம்</string>
+    <string name="model_rgb_max_denoise_fp16">பொது சுருக்கம், பொது இரைச்சல்</string>
+    <string name="model_wb_denoise">நிறமற்ற கார்ட்டூன் சத்தம்</string>
+    <string name="model_span_anime_pretrain">வேகமான, பொதுவான சுருக்கம், பொது இரைச்சல், அனிமேஷன்/காமிக்ஸ்/அனிம்</string>
+    <string name="model_book_scan">புத்தக ஸ்கேனிங்</string>
+    <string name="model_overexposure">வெளிப்பாடு திருத்தம்</string>
+    <string name="model_fbcnn_color_fp16">பொதுவான சுருக்க, வண்ணப் படங்களில் சிறந்தது</string>
+    <string name="model_fbcnn_gray_fp16">பொதுவான சுருக்கம், கிரேஸ்கேல் படங்கள் ஆகியவற்றில் சிறந்தது</string>
+    <string name="model_fbcnn_gray_double_fp16">பொதுவான சுருக்கம், கிரேஸ்கேல் படங்கள், வலுவானது</string>
+    <string name="model_scunet_color_gan_fp16">பொது இரைச்சல், வண்ண படங்கள்</string>
+    <string name="model_scunet_color_psnr_fp16">பொது இரைச்சல், வண்ணப் படங்கள், சிறந்த விவரங்கள்</string>
+    <string name="model_scunet_gray_15_fp16">பொது இரைச்சல், கிரேஸ்கேல் படங்கள்</string>
+    <string name="model_scunet_gray_25_fp16">பொதுவான சத்தம், கிரேஸ்கேல் படங்கள், வலிமையானது</string>
+    <string name="model_scunet_gray_50_fp16">பொதுவான சத்தம், கிரேஸ்கேல் படங்கள், வலிமையானது</string>
+    <string name="model_jpeg_destroyer">பொது சுருக்கம்</string>
+    <string name="model_jaywreck">பொது சுருக்கம்</string>
+    <string name="model_h264">டெக்ஸ்டுரைசேஷன், h264 சுருக்கம்</string>
+    <string name="model_vhs">VHS சுருக்கம்</string>
+    <string name="model_cinepak">தரமற்ற சுருக்கம் (சினிபாக், எம்எஸ்வீடியோ1, ரோக்)</string>
+    <string name="model_debink_v4">பிங்க் சுருக்கம், வடிவவியலில் சிறந்தது</string>
+    <string name="model_debink_v5">பிங்க் சுருக்கம், வலுவானது</string>
+    <string name="model_debink_v6">பிங்க் சுருக்க, மென்மையானது, விவரங்களைத் தக்கவைக்கிறது</string>
+    <string name="model_antialias">படிக்கட்டு-படி விளைவை நீக்குதல், மென்மையாக்குதல்</string>
+    <string name="model_kdm_scans">ஸ்கேன் செய்யப்பட்ட கலை/வரைபடங்கள், லேசான சுருக்கம், மோயர்</string>
+    <string name="model_bandage">கலர் பேண்டிங்</string>
+    <string name="model_halftone">மெதுவாக, ஹால்ஃப்டோன்களை நீக்குகிறது</string>
+    <string name="model_colorizer">கிரேஸ்கேல்/பிடபிள்யூ படங்களுக்கான ஜெனரல் கலரைசர், சிறந்த முடிவுகளுக்கு DDColor ஐப் பயன்படுத்தவும்</string>
+    <string name="model_deedge">விளிம்பு அகற்றுதல்</string>
+    <string name="model_desharpen">அதிகப்படியான கூர்மையை நீக்குகிறது</string>
+    <string name="model_dither">மெதுவான, சலிப்பு</string>
+    <string name="model_gainres">மாற்று மாற்று, பொது கலைப்பொருட்கள், CGI</string>
+    <string name="model_kdm003_scans">KDM003 செயலாக்கத்தை ஸ்கேன் செய்கிறது</string>
+    <string name="model_nmkd_jaywreck3_lite">இலகுரக படத்தை மேம்படுத்தும் மாதிரி</string>
+    <string name="model_bcgone_detailed_v2">சுருக்க கலைப்பொருளை அகற்றுதல்</string>
+    <string name="model_bcgone_smooth">சுருக்க கலைப்பொருளை அகற்றுதல்</string>
+    <string name="model_bandage_smooth">மென்மையான முடிவுகளுடன் கட்டு அகற்றுதல்</string>
+    <string name="model_bendel_halftone">ஹாஃப்டோன் மாதிரி செயலாக்கம்</string>
+    <string name="model_dither_deleter_v3_smooth">டிதர் பேட்டர்ன் அகற்றுதல் V3</string>
+    <string name="model_jpeg_destroyer_v2">JPEG கலைப்பொருள் அகற்றுதல் V2</string>
+    <string name="model_nmkd_h264_texturize">H.264 அமைப்பு விரிவாக்கம்</string>
+    <string name="model_vhs_sharpen">VHS கூர்மைப்படுத்துதல் மற்றும் மேம்படுத்துதல்</string>
+    <string name="merging">இணைத்தல்</string>
+    <string name="chunk_size">துண்டு அளவு</string>
+    <string name="overlap_size">ஒன்றுடன் ஒன்று அளவு</string>
+    <string name="note_chunk_info">%1$d pxக்கு மேலான படங்கள் வெட்டப்பட்டு, துண்டுகளாகச் செயலாக்கப்படும், காணக்கூடிய சீம்களைத் தடுக்க இவற்றை ஒன்றுடன் ஒன்று இணைக்கும்.</string>
+    <string name="large_chunk_warning">பெரிய அளவுகள் குறைந்த-இறுதி சாதனங்களுடன் உறுதியற்ற தன்மையை ஏற்படுத்தும்</string>
+    <string name="select_one_to_start">தொடங்குவதற்கு ஒன்றைத் தேர்ந்தெடுக்கவும்</string>
+    <string name="delete_model_sub">%s மாதிரியை நீக்க விரும்புகிறீர்களா? நீங்கள் அதை மீண்டும் பதிவிறக்கம் செய்ய வேண்டும்</string>
+    <string name="confirm">உறுதிப்படுத்தவும்</string>
+    <string name="models">மாதிரிகள்</string>
+    <string name="downloaded_models">பதிவிறக்கம் செய்யப்பட்ட மாதிரிகள்</string>
+    <string name="available_models">கிடைக்கும் மாதிரிகள்</string>
+    <string name="preparing">தயாராகிறது</string>
+    <string name="active_model">செயலில் உள்ள மாதிரி</string>
+    <string name="failed_to_open_session">அமர்வைத் திறக்க முடியவில்லை</string>
+    <string name="only_onnx_models">.onnx/.ort மாதிரிகளை மட்டுமே இறக்குமதி செய்ய முடியும்</string>
+    <string name="import_model">இறக்குமதி மாதிரி</string>
+    <string name="import_model_sub">மேலும் பயன்படுத்த தனிப்பயன் onnx மாதிரியை இறக்குமதி செய்யவும், onnx/ort மாதிரிகள் மட்டுமே ஏற்றுக்கொள்ளப்படும், கிட்டத்தட்ட அனைத்து esrgan போன்ற மாறுபாடுகளையும் ஆதரிக்கிறது</string>
+    <string name="imported_models">இறக்குமதி செய்யப்பட்ட மாதிரிகள்</string>
+    <string name="model_scunet_color_15_fp16">பொது இரைச்சல், வண்ண படங்கள்</string>
+    <string name="model_scunet_color_25_fp16">பொதுவான சத்தம், வண்ணப் படங்கள், வலிமையானது</string>
+    <string name="model_scunet_color_50_fp16">பொதுவான சத்தம், வண்ண படங்கள், வலிமையானது</string>
+    <string name="model_artifacts_dithering_alsa">கலைப்பொருட்கள் மற்றும் வண்ணப் பிணைப்பைக் குறைக்கிறது, மென்மையான சாய்வு மற்றும் தட்டையான வண்ணப் பகுதிகளை மேம்படுத்துகிறது.</string>
+    <string name="model_nmkd_brighten_redux">இயற்கையான வண்ணங்களைப் பாதுகாக்கும் போது சமநிலை சிறப்பம்சங்களுடன் படத்தின் பிரகாசம் மற்றும் மாறுபாட்டை மேம்படுத்துகிறது.</string>
+    <string name="model_nmkd_brighten">இருண்ட படங்களைப் பிரகாசமாக்குகிறது, அதே நேரத்தில் விவரங்கள் மற்றும் அதிகப்படியான வெளிப்பாட்டைத் தவிர்க்கிறது.</string>
+    <string name="model_nmkd_detoon">அதிகப்படியான வண்ண டோனிங்கை நீக்குகிறது மற்றும் மிகவும் நடுநிலை மற்றும் இயற்கையான வண்ண சமநிலையை மீட்டெடுக்கிறது.</string>
+    <string name="model_noise_toner_poisson_detailed">நுண்ணிய விவரங்கள் மற்றும் அமைப்புகளைப் பாதுகாப்பதில் முக்கியத்துவத்துடன் பாய்சன் அடிப்படையிலான இரைச்சல் டோனிங்கைப் பயன்படுத்துகிறது.</string>
+    <string name="model_noise_toner_poisson_soft">மென்மையான மற்றும் குறைவான ஆக்ரோஷமான காட்சி முடிவுகளுக்கு மென்மையான பாய்சன் இரைச்சல் டோனிங்கைப் பயன்படுத்துகிறது.</string>
+    <string name="model_noise_toner_uniform_detailed">சீரான இரைச்சல் டோனிங் விவரம் பாதுகாப்பு மற்றும் படத்தின் தெளிவு ஆகியவற்றில் கவனம் செலுத்துகிறது.</string>
+    <string name="model_noise_toner_uniform_soft">நுட்பமான அமைப்பு மற்றும் மென்மையான தோற்றத்திற்காக மென்மையான சீரான இரைச்சல் டோனிங்.</string>
+    <string name="model_repainter">கலைப்பொருட்களை மீண்டும் வர்ணம் பூசுவதன் மூலமும், படத்தின் நிலைத்தன்மையை மேம்படுத்துவதன் மூலமும் சேதமடைந்த அல்லது சீரற்ற பகுதிகளை சரிசெய்கிறது.</string>
+    <string name="model_debandurh_fs_ultra_lite">லைட்வெயிட் டிபாண்டிங் மாடல், இது குறைந்த செயல்திறன் செலவில் வண்ணப் பட்டையை நீக்குகிறது.</string>
+    <string name="model_jpeg_0_20">மேம்பட்ட தெளிவுக்காக மிக உயர்ந்த சுருக்க கலைப்பொருட்கள் (0-20% தரம்) கொண்ட படங்களை மேம்படுத்துகிறது.</string>
+    <string name="model_jpeg_20_40">உயர் சுருக்க கலைப்பொருட்கள் (20-40% தரம்) கொண்ட படங்களை மேம்படுத்துகிறது, விவரங்களை மீட்டமைக்கிறது மற்றும் சத்தத்தைக் குறைக்கிறது.</string>
+    <string name="model_jpeg_40_60">மிதமான சுருக்கத்துடன் படங்களை மேம்படுத்துகிறது (40-60% தரம்), கூர்மை மற்றும் மென்மையை சமநிலைப்படுத்துகிறது.</string>
+    <string name="model_jpeg_60_80">நுட்பமான விவரங்கள் மற்றும் அமைப்புகளை மேம்படுத்த, ஒளி சுருக்கத்துடன் (60-80% தரம்) படங்களைச் செம்மைப்படுத்துகிறது.</string>
+    <string name="model_jpeg_80_100">இயற்கையான தோற்றத்தையும் விவரங்களையும் பாதுகாக்கும் அதே வேளையில் இழப்பற்ற படங்களை (80-100% தரம்) சற்று மேம்படுத்துகிறது.</string>
+    <string name="model_spongecolor_lite">எளிய மற்றும் வேகமான வண்ணமயமாக்கல், கார்ட்டூன்கள், சிறந்தவை அல்ல</string>
+    <string name="model_deblr">கலைப்பொருட்களை அறிமுகப்படுத்தாமல், பட மங்கலை சிறிது குறைக்கிறது, கூர்மையை மேம்படுத்துகிறது.</string>
+    <string name="processing_channel">நீண்ட கால செயல்பாடுகள்</string>
+    <string name="processing_image">படத்தை செயலாக்குகிறது</string>
+    <string name="processing">செயலாக்கம்</string>
+    <string name="model_artifacts_jpg_0_20">மிகக் குறைந்த தரமான படங்களில் (0-20%) கனமான JPEG சுருக்கக் கலைப்பொருட்களை நீக்குகிறது.</string>
+    <string name="model_artifacts_jpg_20_40">மிகவும் சுருக்கப்பட்ட படங்களில் (20-40%) வலுவான JPEG கலைப்பொருட்களைக் குறைக்கிறது.</string>
+    <string name="model_artifacts_jpg_40_60">பட விவரங்களை (40-60%) பாதுகாக்கும் போது மிதமான JPEG கலைப்பொருட்களை சுத்தம் செய்கிறது.</string>
+    <string name="model_artifacts_jpg_60_80">ஒளி JPEG கலைப்பொருட்களை மிகவும் உயர்தர படங்களில் (60-80%) செம்மைப்படுத்துகிறது.</string>
+    <string name="model_artifacts_jpg_80_100">சிறிய JPEG கலைப்பொருட்களை கிட்டத்தட்ட இழப்பற்ற படங்களில் (80-100%) நுட்பமாகக் குறைக்கிறது.</string>
+    <string name="model_redetail_v2">சிறந்த விவரங்கள் மற்றும் அமைப்புகளை மேம்படுத்துகிறது, கனமான கலைப்பொருட்கள் இல்லாமல் உணரப்பட்ட கூர்மையை மேம்படுத்துகிறது.</string>
+    <string name="processing_finished">செயலாக்கம் முடிந்தது</string>
+    <string name="processing_failed">செயலாக்கம் தோல்வியடைந்தது</string>
+    <string name="model_itf_skin_diffdetail_lite">வேகத்திற்கு உகந்ததாக, இயற்கையான தோற்றத்தை வைத்து, தோல் அமைப்புகளையும் விவரங்களையும் மேம்படுத்துகிறது.</string>
+    <string name="model_sbdv_dejpeg">JPEG சுருக்க கலைப்பொருட்களை நீக்குகிறது மற்றும் சுருக்கப்பட்ட புகைப்படங்களுக்கான படத்தின் தரத்தை மீட்டெடுக்கிறது.</string>
+    <string name="model_iso_denoise_v1">குறைந்த வெளிச்சத்தில் எடுக்கப்பட்ட புகைப்படங்களில் ISO சத்தத்தைக் குறைக்கிறது, விவரங்களைப் பாதுகாக்கிறது.</string>
+    <string name="model_dejumbo">அதிகப்படியான அல்லது \"ஜம்போ\" சிறப்பம்சங்களை சரிசெய்து சிறந்த டோனல் சமநிலையை மீட்டெடுக்கிறது.</string>
+    <string name="model_ddcolor_tiny">கிரேஸ்கேல் படங்களுக்கு இயற்கையான வண்ணங்களைச் சேர்க்கும் இலகுரக மற்றும் வேகமான வண்ணமயமாக்கல் மாதிரி.</string>
+    <string name="type_dejpeg">DEJPEG</string>
+    <string name="type_denoise">டெனோயிஸ்</string>
+    <string name="type_colorize">வண்ணமயமாக்கு</string>
+    <string name="type_artifacts">கலைப்பொருட்கள்</string>
+    <string name="type_enhance">மேம்படுத்து</string>
+    <string name="type_anime">அசையும்</string>
+    <string name="type_scans">ஸ்கேன் செய்கிறது</string>
+    <string name="type_upscale">மேல்தட்டு</string>
+    <string name="model_realesrgan_x4v3">பொதுப் படங்களுக்கான X4 அப்ஸ்கேலர்; குறைந்த GPU மற்றும் நேரத்தைப் பயன்படுத்தும் சிறிய மாடல், மிதமான தேய்மானம் மற்றும் denoise.</string>
+    <string name="model_realesrgan_x2plus">பொதுவான படங்கள், இழைமங்களைப் பாதுகாத்தல் மற்றும் இயற்கையான விவரங்களுக்கு X2 அப்ஸ்கேலர்.</string>
+    <string name="model_realesrgan_x4plus">மேம்படுத்தப்பட்ட இழைமங்கள் மற்றும் யதார்த்தமான முடிவுகளுடன் கூடிய பொதுவான படங்களுக்கான X4 அப்ஸ்கேலர்.</string>
+    <string name="model_realesrgan_x4plus_anime">அனிம் படங்களுக்கு உகந்ததாக X4 அப்ஸ்கேலர்; கூர்மையான கோடுகள் மற்றும் விவரங்களுக்கு 6 RRDB தொகுதிகள்.</string>
+    <string name="model_realesrnet_x4plus">MSE இழப்புடன் கூடிய X4 அப்ஸ்கேலர், மென்மையான முடிவுகளைத் தருகிறது மற்றும் பொதுவான படங்களுக்குக் குறைக்கப்பட்ட கலைப்பொருட்கள்.</string>
+    <string name="model_realesrgan_x4plus_anime_4b32f">X4 Upscaler அனிம் படங்களுக்கு உகந்ததாக உள்ளது; கூர்மையான விவரங்கள் மற்றும் மென்மையான கோடுகள் கொண்ட 4B32F மாறுபாடு.</string>
+    <string name="model_ultrasharp_v2_x4">பொதுப் படங்களுக்கான X4 UltraSharp V2 மாதிரி; கூர்மை மற்றும் தெளிவை வலியுறுத்துகிறது.</string>
+    <string name="model_ultrasharp_v2_lite_x4">X4 அல்ட்ராஷார்ப் V2 லைட்; வேகமான மற்றும் சிறிய, குறைவான GPU நினைவகத்தைப் பயன்படுத்தும் போது விவரங்களைப் பாதுகாக்கிறது.</string>
+    <string name="model_rmbg_1_4">விரைவான பின்னணியை அகற்றுவதற்கான இலகுரக மாதிரி. சீரான செயல்திறன் மற்றும் துல்லியம். உருவப்படங்கள், பொருள்கள் மற்றும் காட்சிகளுடன் வேலை செய்கிறது. பெரும்பாலான பயன்பாட்டு நிகழ்வுகளுக்கு பரிந்துரைக்கப்படுகிறது.</string>
+    <string name="model_rmbg_2_0">சிறந்த விவரம் கையாளுதலுடன் மேம்படுத்தப்பட்ட பதிப்பு. சிக்கலான பின்னணிகள் மற்றும் வெளிப்படையான பொருள்களுடன் சிறந்தது. அதிக துல்லியம் ஆனால் அதிக செயலாக்க சக்தி தேவைப்படுகிறது.</string>
+    <string name="type_removebg">பிஜியை அகற்று</string>
+    <string name="horizontal_border_thickness">கிடைமட்ட பார்டர் தடிமன்</string>
+    <string name="vertical_border_thickness">செங்குத்து பார்டர் தடிமன்</string>
 </resources>
