--- a/core/resources/src/main/res/values-zh-rCN/strings.xml
+++ b/core/resources/src/main/res/values-zh-rCN/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ ImageToolbox is an image editor for android
-  ~ Copyright (c) 2025 T8RIN (Malik Mukhametzyanov)
+  ~ Copyright (c) 2026 T8RIN (Malik Mukhametzyanov)
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -14,7 +14,9 @@
   ~
   ~ You should have received a copy of the Apache License
   ~ along with this program.  If not, see <http://www.apache.org/licenses/LICENSE-2.0>.
-  --><resources>
+  -->
+
+<resources>
     <string name="something_went_wrong">发生错误</string>
     <string name="pick_image">选择图片以开始</string>
     <string name="close">关闭</string>
@@ -1994,4 +1996,12 @@
     <string name="model_realesrgan_x4plus">通用图像的X4放大器，增强纹理和逼真效果。</string>
     <string name="model_realesrgan_x4plus_anime">为动漫图像优化的X4上采样器；6个RRDB块，使线条更清晰，细节更丰富。</string>
     <string name="model_realesrnet_x4plus">带有MSE损失的X4上采样器，为普通图像生成更平滑的结果并减少伪影。</string>
+    <string name="model_realesrgan_x4plus_anime_4b32f">X4 Upscaler 针对动漫图像进行了优化； 4B32F 型号具有更锐利的细节和流畅的线条。</string>
+    <string name="model_ultrasharp_v2_x4">X4 UltraSharp V2 模型，适用于一般图像；强调锐度和清晰度。</string>
+    <string name="model_ultrasharp_v2_lite_x4">X4 UltraSharp V2 Lite；更快、更小，在使用更少 GPU 内存的同时保留细节。</string>
+    <string name="model_rmbg_1_4">用于快速背景去除的轻量级模型。平衡的性能和准确性。适用于肖像、物体和场景。推荐用于大多数用例。</string>
+    <string name="model_rmbg_2_0">具有卓越细节处理的增强版本。对于复杂的背景和透明的物体效果更好。精度更高，但需要更多的处理能力。</string>
+    <string name="type_removebg">删除背景</string>
+    <string name="horizontal_border_thickness">水平边框厚度</string>
+    <string name="vertical_border_thickness">垂直边框厚度</string>
 </resources>
